--- a/QLKhachSan/QLKhachSan.csproj
+++ b/QLKhachSan/QLKhachSan.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="CustomParameter.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="FormSuppliesSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSuppliesSearch.Designer.cs">
+      <DependentUpon>FormSuppliesSearch.cs</DependentUpon>
+    </Compile>
     <Compile Include="GuestForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,8 +116,17 @@
     <Compile Include="RoomForm.Designer.cs">
       <DependentUpon>RoomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ThemVatDung.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThemVatDung.Designer.cs">
+      <DependentUpon>ThemVatDung.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CheckOutForm.resx">
       <DependentUpon>CheckOutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSuppliesSearch.resx">
+      <DependentUpon>FormSuppliesSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GuestForm.resx">
       <DependentUpon>GuestForm.cs</DependentUpon>
@@ -149,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SuppliesForm.resx">
       <DependentUpon>SuppliesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThemVatDung.resx">
+      <DependentUpon>ThemVatDung.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
