--- a/QLKhachSan/QLKhachSan.csproj
+++ b/QLKhachSan/QLKhachSan.csproj
@@ -78,6 +78,7 @@
     <Compile Include="HomeForm.Designer.cs">
       <DependentUpon>HomeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ObjectCommonSearch.cs" />
     <Compile Include="RentingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,11 +115,11 @@
     <Compile Include="SearchGuest.Designer.cs">
       <DependentUpon>SearchGuest.cs</DependentUpon>
     </Compile>
-    <Compile Include="ServiecsForm.cs">
+    <Compile Include="ServicesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ServiecsForm.Designer.cs">
-      <DependentUpon>ServiecsForm.cs</DependentUpon>
+    <Compile Include="ServicesForm.Designer.cs">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SuppliesForm.cs">
       <SubType>Form</SubType>
@@ -139,6 +140,12 @@
     </Compile>
     <Compile Include="RoomForm.Designer.cs">
       <DependentUpon>RoomForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ThemDichVu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThemDichVu.Designer.cs">
+      <DependentUpon>ThemDichVu.cs</DependentUpon>
     </Compile>
     <Compile Include="ThemVatDung.cs">
       <SubType>Form</SubType>
@@ -195,11 +202,14 @@
     <EmbeddedResource Include="SearchGuest.resx">
       <DependentUpon>SearchGuest.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ServiecsForm.resx">
-      <DependentUpon>ServiecsForm.cs</DependentUpon>
+    <EmbeddedResource Include="ServicesForm.resx">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SuppliesForm.resx">
       <DependentUpon>SuppliesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThemDichVu.resx">
+      <DependentUpon>ThemDichVu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ThemVatDung.resx">
       <DependentUpon>ThemVatDung.cs</DependentUpon>
